@@ -66,7 +66,7 @@
                     data-focal-point-height="{{ image.focal_point_height|default_if_none:'' }}"
                     data-focal-input-label="{% trans 'Image focal point' %}"
                 >
-                    <img {{ rendition.attrs }} data-original-width="{{ image.width|unlocalize }}" data-original-height="{{ image.height|unlocalize }}" class="show-transparency">
+                    <img {{ rendition.attrs }} decoding="async" data-original-width="{{ image.width|unlocalize }}" data-original-height="{{ image.height|unlocalize }}" class="show-transparency">
                     <div class="current-focal-point-indicator{% if not image.has_focal_point %} hidden{% endif %}"></div>
                 </div>
 
